# spikeball-matchmaking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compare_py_to_cpp.py  config.py  generate_matchups_excel_sheet.py  main.py  matchmaker.py  matchmaker_rl.py  matchmaking_fast_wrapper.py  mp_generator.py  player_metrics_fast.cpp  pyproject.toml  requirements.txt  setup.py  sp_generator.py  test.py  test_cpp_vs_py_metrics.py  test_generator.py  verify_matchups.py
matchmaking/: config.py  data.py  export.py  generator.py  interaction_calculator.pyx  metric_compute_functions.py  metric_type.py  metrics.py  optimizer.py  simple_optimizer.py  timer.py  utils.py  vectorized_metric_calculator.py  vectorized_optimizer.py  vectorized_stat_calculator.py  visualizer.py
output/: matchups_with_points.xlsx  matchups_with_points_and_format.xlsx  matchups_with_points_and_format_10pl_1h15min.xlsx  matchups_with_points_and_format_10pl_2h30min.xlsx  matchups_with_points_and_format_10pl_3h45min.xlsx  matchups_with_points_and_format_11pl_2h45min.xlsx  matchups_with_points_and_format_12pl_3h0min.xlsx  matchups_with_points_and_format_13pl_3h15min.xlsx  matchups_with_points_and_format_14pl_1h45min.xlsx  matchups_with_points_and_format_14pl_3h30min.xlsx  matchups_with_points_and_format_15pl_1h15min.xlsx  matchups_with_points_and_format_15pl_2h30min.xlsx  matchups_with_points_and_format_15pl_3h45min.xlsx  model.h5
scripts/: README.md  generate_matchups_excel_mp.py  generate_matchups_excel_sp.py
tests/: test_integration.py  test_metric_compute_functions.py  test_simple_optimizer.py  test_vectorized_optimizer.py  test_visualizer.py
