[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaking"
version = "0.2.0"
description = "A matchmaking system with for 2v2 games, focused on spikeball."
authors = [
    {name = "Timo Leitritz"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
    "numpy",
    "tqdm",
    "psutil",
    "openpyxl",
    "matplotlib",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["matchmaking*"]